# nodetool-base

./: .coverage  .gitignore  .pre-commit-config.yaml  =2.0.0  =2024.7.1  AGENTS.md  CHANGELOG.md  CLAUDE.md  ESSENTIAL_NODES_QUICK_REFERENCE.md  ESSENTIAL_NODES_ROADMAP.md  ESSENTIAL_NODES_SPECIFICATION.md  EXECUTIVE_SUMMARY.md  MANIFESTO_EVALUATION.md  NODE_ANALYSIS.md  NODE_ANALYSIS_INDEX.md  NODE_COVERAGE_BREAKDOWN.md  NODE_COVERAGE_SUMMARY.md  NODE_EVALUATION.md  NODE_EVALUATION_README.md  README.md  RISK_ASSESSMENT_REPORT.md  benchmark_blocking_io.py  example.py  kie_models.json  patch.diff  pyproject.toml  pytest.ini  requirements-dev.txt  risk_assessment_findings.json  test_browser_agent.py  test_csv_perf.py  test_math_agent.py  test_mock_standalone.py  test_perf.py  test_perf2.py  test_product.py  test_slice2.py
.github/claude-memory/: README.md  features.md
.github/opencode-memory/: README.md  features.md  node-creation-guide.md  repository-context.md
.github/workflows/: assistant-kie-sync.yml  assistant.yml  claude-kie-sync.yml  claude.yml  copilot-setup-steps.yml  deploy-docs.yml  opencode-kie-sync.yml  opencode.yml  publish-wheel.yml  sync-metadata.yml  test.yml
.jules/: bolt.md
docs/: AUTO_SAVE_FEATURE.md  Gemfile  VISUAL_RECIPES.md  _config.yml  control_agent.md  eval.md  index.html  index.md  index.md.backup  nodes.md  nodetool-core-3d-additions.md  nodetool_audio.md  nodetool_base64.md  nodetool_boolean.md  nodetool_code.md  nodetool_compression.md  nodetool_constant.md  nodetool_control.md  nodetool_data.md  nodetool_date.md  nodetool_dictionary.md  nodetool_group.md  nodetool_html.md  nodetool_image.md  nodetool_input.md  nodetool_json.md  nodetool_list.md  nodetool_math.md  nodetool_os.md  nodetool_output.md  nodetool_random.md  nodetool_sqlite.md  nodetool_text.md  nodetool_video.md  nodetool_yt_dlp.md  video-script-nodetool-intro.md
docs/_site/: feed.xml  index.html  nodes.html  nodetool_audio.html  nodetool_boolean.html  nodetool_code.html  nodetool_constant.html  nodetool_control.html  nodetool_date.html  nodetool_dictionary.html  nodetool_group.html  nodetool_image.html  nodetool_input.html  nodetool_json.html  nodetool_list.html  nodetool_math.html  nodetool_os.html  nodetool_output.html  nodetool_text.html  nodetool_video.html  styles.css
docs/_site/assets/js/: search-data.json
docs/nodes/: SpiderCrawl.md
docs/nodetool/: boolean.md  code.md  constant.md  dictionary.md  input.md  json.md  list.md  os.md  output.md  text.md  video.md
evals/: README.md  __init__.py  common.py  eval.sh  eval_browser_agent.py  eval_data_agent.py  eval_data_generator.py  eval_list_generator.py  eval_math_agent.py  eval_runner.py  eval_search_agent.py  eval_structured_output_generator.py  eval_svg_generator.py  run_eval.py
examples/: advanced_chat_workflow.py  ai_workflows_on_reddit.py  album_cover_creator.py  batch_thumbnail_prompts.py  brand_asset_generator.py  catalog_generator.py  chromadb_research_agent.py  concept_art_iteration_board.py  control_agent_example.py  generate_json_examples.py  instagram_scraper_task.py  kie_brand_video_production.py  kie_character_animation_studio.py  kie_music_video_generator.py  kie_photo_to_cinematic_video.py  kie_product_launch_campaign.py  kie_social_media_video_ad.py  kie_talking_head_presenter.py  learning_path_generator.py  movie_poster_designer.py  multimodal_chat_workflow.py  music_video_visualizer.py  photo_enhancement_suite.py  product_description_generator_dsl.py  product_hunt_ai_extractor_agent.py  product_mockup_generator.py  reddit_scraper_agent.py  simple_chat_workflow.py  social_media_calendar_filler.py  social_media_sentiment_dsl.py  spider_crawl_example.py  test_hackernews_agent.py  thumbnail_prompt_generator.py  video_broll_automation.py  wikipedia_agent_example.py  youtube_thumbnail_pipeline.py
src/llama_index/embeddings/huggingface/: base.py
src/nodetool/: __init__.py  package.json
src/nodetool/config/: __init__.py  environment.py  logging_config.py
src/nodetool/dsl/: __init__.py  graph.py  handles.py
src/nodetool/dsl/anthropic/: agents.py
src/nodetool/examples/: Daily Digest.json
src/nodetool/io/: __init__.py  uri_utils.py
src/nodetool/metadata/: __init__.py  types.py
src/nodetool/nodes/: huggingface_hub.py
src/nodetool/ntl/: README.md  __init__.py  loader.py  parser.py
src/nodetool/package_metadata/: nodetool-base.json
src/nodetool/providers/: __init__.py  extended_serp_provider.py  kie_provider.py  types.py
src/nodetool/storage/: memory_storage.py
src/nodetool/workflows/: __init__.py  base_node.py  io.py  processing_context.py  types.py
tests/: conftest.py  repro_add_subtitles.py  test_catalog_generator_example.py  test_subtitle_logic.py  verify_import.py
tests/nodetool/: test_agents.py  test_anthropic_text.py  test_audio_conversion.py  test_auto_save_asset.py  test_base64_nodes.py  test_beautifulsoup_nodes.py  test_boolean.py  test_boolean_fun_workflows.py  test_boolean_operations.py  test_boundary_time_standalone.py  test_brave_search.py  test_browser_webfetch_nodes.py  test_channel_nodes.py  test_claude_agent.py  test_code_nodes.py  test_code_streaming.py  test_collection_fun_workflows.py  test_collection_pipeline_workflows.py  test_compare.py  test_constant.py  test_control_nodes.py  test_csv_stream.py  test_data_etl_workflows.py  test_data_fun_workflows.py  test_data_nodes.py  test_date_nodes.py  test_decision_engine_workflows.py  test_dictionary.py  test_dictionary_extended.py  test_dictionary_filters.py  test_dictionary_operations.py  test_dictionary_security.py  test_difflib.py  test_discord.py  test_docx_nodes.py  test_embedding.py  test_example_workflows.py  test_excel_nodes.py  test_faiss.py  test_faiss_nodes.py  (+77 more)
tests/nodetool/image/: test_image.py  test_image_enhance.py  test_image_operations.py  test_image_source.py  test_image_transform.py
tests/nodetool/test_providers/: test_kie_provider.py
tests/nodetool/triggers/: test_base_trigger.py  test_file_watch_trigger.py  test_interval_trigger.py  test_manual_trigger.py  test_webhook_trigger.py
(+450 files in other folders)
