[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-base"
version = "0.6.0"
description = "Nodetool Base nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core>=0.6.0,<0.7.0", "plyer==2.1.0", "jinja2"]

[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.0"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-base.json",
    "src/nodetool/assets/nodetool-base/Categorize Mails.jpg",
    "src/nodetool/assets/nodetool-base/Simple Chat.jpg",
    "src/nodetool/assets/nodetool-base/Chat with Docs.jpg",
    "src/nodetool/assets/nodetool-base/Daily Digest.jpg",
    "src/nodetool/assets/nodetool-base/Image To Audio Story.jpg",
    "src/nodetool/assets/nodetool-base/Data Generator.jpg",
    "src/nodetool/assets/nodetool-base/Data Visualization Pipeline.jpg",
    "src/nodetool/assets/nodetool-base/Index PDFs.jpg",
    "src/nodetool/assets/nodetool-base/Summarize Paper.jpg",
]

[tool.poetry]
include = ["src/nodetool/package_metadata/nodetool-base.json", "src/nodetool/assets/nodetool-base/Categorize Mails.jpg", "src/nodetool/assets/nodetool-base/Simple Chat.jpg", "src/nodetool/assets/nodetool-base/Chat with Docs.jpg", "src/nodetool/assets/nodetool-base/Index PDFs.jpg", "src/nodetool/assets/nodetool-base/Daily Digest.jpg", "src/nodetool/assets/nodetool-base/Summarize Paper.jpg", "src/nodetool/assets/nodetool-base/Image To Audio Story.jpg", "src/nodetool/assets/nodetool-base/Data Generator.jpg", "src/nodetool/assets/nodetool-base/Data Visualization Pipeline.jpg"]
