[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-base"
version = "0.6.2-rc.10"
description = "Nodetool Base nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.10.13"

dependencies = [
    "nodetool-core==0.6.2-rc.10",
    "plyer==2.1.0",
    "selenium>=4.26.1",
    "trafilatura>=2.0.0",
    "browser-use",
    "faiss-cpu>=1.12.0",
    "langchain-openai",
    "langchain-ollama",
    "langchain-anthropic",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-base.json",
    "src/nodetool/assets/nodetool-base/Categorize Mails.jpg",
    "src/nodetool/assets/nodetool-base/Simple Chat.jpg",
    "src/nodetool/assets/nodetool-base/Chat with Docs.jpg",
    "src/nodetool/assets/nodetool-base/Daily Digest.jpg",
    "src/nodetool/assets/nodetool-base/Image To Audio Story.jpg",
    "src/nodetool/assets/nodetool-base/Data Generator.jpg",
    "src/nodetool/assets/nodetool-base/Data Visualization Pipeline.jpg",
    "src/nodetool/assets/nodetool-base/Index PDFs.jpg",
    "src/nodetool/assets/nodetool-base/Summarize Paper.jpg",
    "package_metadata/nodetool-base.json",
    "assets/nodetool-base/Categorize Mails.jpg",
    "assets/nodetool-base/Simple Chat.jpg",
    "assets/nodetool-base/Chat with Docs.jpg",
    "assets/nodetool-base/Index PDFs.jpg",
    "assets/nodetool-base/Daily Digest.jpg",
    "assets/nodetool-base/Summarize Paper.jpg",
    "assets/nodetool-base/Image To Audio Story.jpg",
    "assets/nodetool-base/Data Generator.jpg",
    "assets/nodetool-base/Data Visualization Pipeline.jpg",
    "assets/nodetool-base/Movie Posters.jpg",
    "assets/nodetool-base/Image Enhance.jpg",
    "assets/nodetool-base/Flashcard Generator.jpg",
    "assets/nodetool-base/Transcribe Audio.jpg",
    "assets/nodetool-base/Creative Story Ideas.jpg",
    "assets/nodetool-base/Meeting Transcript Summarizer.jpg",
    "assets/nodetool-base/Summarize Newsletters.jpg",
    "assets/nodetool-base/Realtime Agent.jpg",
    "assets/nodetool-base/Story to Video Generator.jpg",
    "assets/nodetool-base/Summarize RSS.jpg",
    "assets/nodetool-base/Fetch Papers.jpg",
]
